--- a/app/public/index.html
+++ b/app/public/index.html
@@ -2,8 +2,9 @@
 <html>
 <head>
   <title>Minesweeper</title>
+  <meta charset="utf-8">
 </head>
 <body>
-  <div id="app"></div>
+  <div id="root"></div>
 </body>
 </html>
